--- a/country/belarus/gos-simvolika/index.html
+++ b/country/belarus/gos-simvolika/index.html
@@ -64,12 +64,16 @@
             </p>
             <h2 id="флаг">Флаг</h2>
             <hr>
+            <div class="photol">
+                <img src="flag-of-BSSR.png" alt="">
+                <figcaption>Флаг Белорусской Советской Социалистической Республики</figcaption>
+            </div>
             <p>
                 Национальный флаг используется с 7 июня 1995 года, через месяц после референдума. Флаг, наряду с гербом,
                 подвергся значимым изменениям. Главными элементами флага являются две полосы — красная и зелёная. С
                 левой стороны расположена вертикальная полоска с находящимся в нём орнаменте. Данный флаг является
                 копией флага Белорусской ССР (1951), использовавшийся во времена СССР.
-            <div class="photo"><img src="flag-of-Belarus.png" alt="" class="photo"></div> В версии советских времён, в
+            <div class="photo"><img src="flag-of-Belarus.png" alt=""></div> В версии советских времён, в
             верхнем левом углу были расположены серп и молот и красные штрихи в сегодняшнем флаге были белыми, а
             белые — красными. Некоторые чиновники и агентства используют немного другие разновидности флага.
             </p>
@@ -81,12 +85,16 @@
             </p>
             <h2 id="герб">Герб</h2>
             <hr>
+            <div class="photol">
+                <img src="gerb-of-BSSR.png" alt="">
+                <figcaption>Герб Белорусской Советской Социалистической Республики</figcaption>
+            </div>
             <p>
                 Также как и флаг, герб был выбран на референдуме 1995 года. Элементы герба включают в себя полосы с
                 цветами флага Беларуси, контуры границы Белоруссии, колосья пшеницы и красную звезду. На двух нижних
                 лентах на белорусском языке написано название страны. Разновидность этого герба была официальной
                 эмблемой Белорусской ССР, созданной
-            <div class="photo"><img src="gerb-of-Belarus.png" alt="" class="photo"></div>
+            <div class="photo"><img src="gerb-of-Belarus.png" alt="" > <figcaption>Герб РБ</figcaption></div>
             Иваном Дубасовым в 1950 году. В версии советских времен, серп и
             молот были на месте контуров границы Беларуси и все полосы были красными. Слева и справа был написан
             социалистический девиз Пролетарии всех стран, соединяйтесь!, написанный на белорусском и русском
