--- a/country/ussr/index.html
+++ b/country/ussr/index.html
@@ -36,7 +36,7 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство  <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="dre"> </a>
+        <a href="/political-na-postsovet-space/">Post Soviet space  <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="dre"> </a>
   
         <a href="/political-na-postsovet-space/country/" >Страны</a>
         <div>
@@ -44,8 +44,7 @@
             <a href="/political-na-postsovet-space/country/belarus/">БССР</a>
             <a href="/political-na-postsovet-space/country/russia/">РСФСР</a>
             <a href="/political-na-postsovet-space/country/ukraine/">УССР</a>
-            <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
-            <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
+          
         </div>
         <div id="nav-country">
             <a href="/political-na-postsovet-space/country/ussr/" >Основная информация</a>
