--- a/country/index.html
+++ b/country/index.html
@@ -35,7 +35,7 @@
 
 <body onload="startTime()">
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство</a>
+        <a href="/political-na-postsovet-space/">Post Soviet space</a>
 
         <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
         <div>
@@ -77,6 +77,7 @@
                             <th scope="col">Страна</th>
                             <th scope="col">Столица</th>
                             <th scope="col">Герб и Флаг</th>
+                            <th scope="col">Герб и Флаг(до распада Советского Союза)</th>
                             <th scope="col">Дата независимости / дата распада СССР</th>
                             <th scope="col">Территория (км<sup>2</sup>)</th>
                             <th scope="col">Население</th>
@@ -87,13 +88,14 @@
                     </thead>
                     <tbody class="ussr">
                         <tr>
-                            <td colspan="7" style="text-align: center;">Государства — члены ООН <br>  <a href="#Беларусь"><img
-                                    src="/political-na-postsovet-space/country/belarus/gos-simvolika/flag-of-Belarus.png"
-                                    alt="" class="flagi"></a><a href="#Россия"> <img
-                                    src="/political-na-postsovet-space/country/russia/gos-simvolika/flag.svg"
-                                    alt="" class="flagi"></a> <a href="#Украина"><img
-                                    src="/political-na-postsovet-space/country/ukraine/flag-of-ukraine.png"
-                                    alt="" class="flagi"></a></td>
+                            <td colspan="8" style="text-align: center;">Государства — члены ООН <br> <a
+                                    href="#Беларусь"><img
+                                        src="/political-na-postsovet-space/country/belarus/gos-simvolika/flag-of-Belarus.png"
+                                        alt="" class="flagi"></a><a href="#Россия"> <img
+                                        src="/political-na-postsovet-space/country/russia/gos-simvolika/flag.svg" alt=""
+                                        class="flagi"></a> <a href="#Украина"><img
+                                        src="/political-na-postsovet-space/country/ukraine/flag-of-ukraine.png" alt=""
+                                        class="flagi"></a></td>
                         </tr>
                         <tr id="Беларусь">
 
@@ -108,6 +110,14 @@
                                 <hr>
                                 <a href="/political-na-postsovet-space/country/belarus/gos-simvolika/#флаг"><img
                                         src="/political-na-postsovet-space/country/belarus/gos-simvolika/flag-of-Belarus.png"
+                                        alt="" class="gerbs"></a>
+                            </td>
+                            <td><a href="/political-na-postsovet-space/country/belarus/gos-simvolika/#герб"><img
+                                        src="/political-na-postsovet-space/country/belarus/gos-simvolika/gerb-of-BSSR.png"
+                                        alt="" class="gerbs"></a>
+                                <hr>
+                                <a href="/political-na-postsovet-space/country/belarus/gos-simvolika/#флаг"><img
+                                        src="/political-na-postsovet-space/country/belarus/gos-simvolika/flag-of-BSSR.png"
                                         alt="" class="gerbs"></a>
                             </td>
 
@@ -125,7 +135,9 @@
                                     республика в составе СССР.
                                 </p>
                                 <p>
-                                    25 декабря 1951 — изменён белорусский флаг
+                                    25 декабря 1951 — <img
+                                        src="/political-na-postsovet-space/country/belarus/gos-simvolika/flag-of-BSSR.png"
+                                        alt="" class="flagi"> изменён белорусский флаг
                                 </p>
                                 <p>
                                     25 августа 1991 — объявлена независимость, без проведения референдума о выходе из
@@ -162,6 +174,7 @@
                                         src="/political-na-postsovet-space/country/ussr/flag-of-USSR.png" alt=""
                                         class="gerbs"></a>
                             </td>
+                            <td>-</td>
                             <td>26 декабря 1991</td>
                             <td>22 402 200</td>
                             <td>292 610 734</td>
@@ -237,6 +250,14 @@
                                         src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png"
                                         alt="" class="gerbs"></a>
                             </td>
+                            <td><a href="/political-na-postsovet-space/country/russia/gos-simvolika/#герб"><img
+                                src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-RSFSR.png"
+                                alt="" class="gerbs"></a>
+                        <hr>
+                        <a href="/political-na-postsovet-space/country/russia/gos-simvolika/#флаг"><img
+                                src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-RSFSR.png"
+                                alt="" class="gerbs"></a>
+                    </td>
                             <td>12 декабря 1991</td>
                             <td>17 125 191</td>
                             <td>146 781 095</td>
@@ -258,6 +279,14 @@
                                         src="/political-na-postsovet-space/country/ukraine/flag-of-ukraine.png" alt=""
                                         class="gerbs"></a>
                             </td>
+                            <td><a href="/political-na-postsovet-space/country/ukraine/gos-simvolika/#герб"><img
+                                src="/political-na-postsovet-space/country/ukraine/gos-simvolika/gerb-of-ukrainian-ssr.png" alt=""
+                                class="gerbs"></a>
+                        <hr>
+                        <a href="/political-na-postsovet-space/country/ukraine/gos-simvolika/#флаг"><img
+                                src="/political-na-postsovet-space/country/ukraine/gos-simvolika/flag-of-ukrainian-ssr.png" alt=""
+                                class="gerbs"></a>
+                    </td>
                             <td>24 августа 1991</td>
                             <td>603 549</td>
                             <td>42 248 598</td>
@@ -293,7 +322,7 @@
 
                         </tr>
                         <tr>
-                            <td colspan="7" style="text-align: center;">Непризнанные государства
+                            <td colspan="8" style="text-align: center;">Непризнанные государства
                             </td>
                         </tr>
                         <tr>
@@ -307,6 +336,7 @@
                                 <img src="/political-na-postsovet-space/country/dni/gos-simvolika/flag-of-Dni.png"
                                     alt="" class="gerbs">
                             </td>
+                            <td>-</td>
                             <td>7 апреля 2014 (от Украины)</td>
                             <td>7 853</td>
                             <td>2 244 547</td>
@@ -334,7 +364,7 @@
                                 <img src="/political-na-postsovet-space/country/lnr/gos-simvolika/flag-of-Lnr.png"
                                     alt="" class="gerbs">
                             </td>
-
+<td>-</td>
                             <td>12 мая 2014 (от Украины)</td>
                             <td>8 377</td>
                             <td>1 450 000</td>
