--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -385,10 +385,11 @@
             <script type="text/javascript">
                 VK.Widgets.Like("vk_like", { type: "button" });
             </script>
-            <hr>
+
             <div class="row">
 
                 <div class="col-sm">
+                    <hr>
                     &copy; 2020-2021 ООО "СССР"
                     <script src="https://yastatic.net/share2/share.js"></script>
                     <div class="ya-share2" data-curtain data-services="messenger,vkontakte,odnoklassniki,telegram">
@@ -404,6 +405,7 @@
                     <!-- /Yandex.Metrika informer -->
                 </div>
                 <div class="col-sm">
+                    <hr>
                     <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
                     <p><a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/legal/">Правовая информация</a></p>
@@ -413,6 +415,7 @@
                 </div>
 
                 <div class="col-sm country">
+                    <hr>
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
@@ -422,22 +425,23 @@
                     <p><a href="/political-na-postsovet-space/country/lnr/">ЛНР</a></p>
                 </div>
                 <div class="col-sm country gimn">
-
+                    <hr>
                     <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> <img
                                     src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg"
                                     class="fr" alt=""></a></b></p>
-                    <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/">Russia</a></b></p>
-                    <p><a href="/political-na-postsovet-space/country/russia/">Basic information</a></p>
-                    <p><a href="/political-na-postsovet-space/country/russia/gos-simvolika/">State symbols</a>
+                    <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> Россия</a></b></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/"> Основная информация</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/gos-simvolika/"> Государственные
+                            символы</a>
                     </p>
-                    <p><a href="/political-na-postsovet-space/country/russia/russian-tradition/">Our Russian
-                            traditions</a></p>
-                    <p><a href="/political-na-postsovet-space/country/russia/president/">President of the Russian
-                            Federation</a></p>
-                    <p><a target="_blank" href="http://kremlin.ru">Website of the President of the Russia</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/russian-tradition/"> Наши русские
+                            традиции</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/president/"> Президент Российской
+                            Федераци</a></p>
+                    <p><a target="_blank" href="http://kremlin.ru">Сайт президента РФ</a></p>
                     <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> <img
-                                    src="/political-na-postsovet-space/country/russia/gos-simvolika/flag.svg" class="fr"
-                                    alt=""></a></b></p>
+                                    src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png"
+                                    class="fr" alt=""></a></b></p>
                 </div>
 
 
