--- a/country/russia/russian-tradition/russian-kithen/index.html
+++ b/country/russia/russian-tradition/russian-kithen/index.html
@@ -404,11 +404,12 @@
             <script type="text/javascript">
                 VK.Widgets.Like("vk_like", { type: "button" });
             </script>
-            <hr>
+        
             <div class="row">
 
 
                 <div class="col-sm">
+                    <hr>
                     &copy; 2020-2021 ООО "СССР"
                     <script src="https://yastatic.net/share2/share.js"></script>
                     <div class="ya-share2" data-curtain data-services="messenger,vkontakte,odnoklassniki,telegram">
@@ -424,6 +425,7 @@
                 </div>
 
                 <div class="col-sm">
+                    <hr>
                     <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
                     <p><a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/legal/">Правовая информация</a></p>
@@ -431,13 +433,9 @@
                             Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
                 </div>
-                <div class="col-sm">
-                    <div class="preside">
-                        <img src="grecha-s-sosisonami/scale_1200.webp" alt="">
-                        <figcaption>Греча со сосисочками</figcaption>
-                    </div>
-                </div>
+              
                 <div class="col-sm country">
+                    <hr>
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
@@ -447,9 +445,9 @@
                     <p><a href="/political-na-postsovet-space/country/lnr/">ЛНР</a></p>
                 </div>
                 <div class="col-sm country gimn">
-
+<hr>
                     <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> <img
-                                    src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"
+                                    src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg"
                                     class="fr" alt=""></a></b></p>
                     <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> Россия</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/russia/"> Основная информация</a></p>
