--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -440,7 +440,7 @@
                             Федераци</a></p>
                     <p><a target="_blank" href="http://kremlin.ru">Сайт президента РФ</a></p>
                     <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> <img
-                                    src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png"
+                                    src="/political-na-postsovet-space/country/russia/gos-simvolika/flag.svg"
                                     class="fr" alt=""></a></b></p>
                 </div>
 
