--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <body>
 
     <header>
+        
         <a href="/political-na-postsovet-space"><img src="serp.ico" alt="" class="dre"> Post Soviet space </a>
         <a href="country/">Страны</a>
 
@@ -57,9 +58,11 @@
                 Мы вместе воевали в войнах, гуляли и т.д. Но в последнее время Украина отдаляется от Беларусси и сильно
                 отдаляется от России. Они думают что под США им будет лучше, но это не так.
             </p>
-            <iframe src="https://datalens.yandex/tat4enkerl0ap?_embedded=1&_theme=dark" width="100%" height="400" frameborder="0"></iframe>
 
+            <iframe src="https://datalens.yandex/tat4enkerl0ap?_embedded=1&_theme=dark" width="100%" height="400"
+                frameborder="0"></iframe>
 
+           
             <hr>
             <!-- Put this script tag to the <head> of your page -->
             <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
@@ -77,6 +80,7 @@
 
         </div>
 
+ 
 
 
     </main>
@@ -84,12 +88,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm">
+                    <hr>
                     &copy; 2020-2021 ООО "СССР"
                     <script src="https://yastatic.net/share2/share.js"></script>
-                    <div class="ya-share2" data-curtain 
-                        data-services="messenger,vkontakte,odnoklassniki,telegram"></div>
+                    <div class="ya-share2" data-curtain data-services="messenger,vkontakte,odnoklassniki,telegram">
+                    </div>
                 </div>
                 <div class="col-sm">
+                    <hr>
                     <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
                     <p><a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/legal/">Правовая информация</a></p>
@@ -99,15 +105,29 @@
                 </div>
 
                 <div class="col-sm country">
+                    <hr>
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
-                    <p><a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
-                    <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
-                    <p><a href="/political-na-postsovet-space/country/russia/">Россия</a></p>
-                    <p><a href="/political-na-postsovet-space/country/ukraine/">Украина</a></p>
-                    <p><a href="/political-na-postsovet-space/country/dni/">ДНР</a></p>
-                    <p><a href="/political-na-postsovet-space/country/lnr/">ЛНР</a></p>
-                </div>
+                    <p> <a href="/political-na-postsovet-space/country/ussr/"><img
+                                src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="fr">
+                            СССР</a></p>
+                    <p><a href="/political-na-postsovet-space/country/belarus/"><img
+                                src="/political-na-postsovet-space/country/belarus/gos-simvolika/gerb-of-Belarus.png"
+                                alt="" class="fr"> Беларусь</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/"><img
+                                src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"
+                                alt="" class="fr"> Россия</a></p>
+                    <p><a href="/political-na-postsovet-space/country/ukraine/"><img
+                                src="/political-na-postsovet-space/country/ukraine/gerb-of-ukraine.png" alt=""
+                                class="fr"> Украина</a></p>
+                    <p><a href="/political-na-postsovet-space/country/dni/"><img
+                                src="/political-na-postsovet-space/country/dni/gos-simvolika/gerb-of-Dni.png" alt=""
+                                class="fr"> ДНР</a></p>
+                    <p><a href="/political-na-postsovet-space/country/lnr/"><img
+                                src="/political-na-postsovet-space/country/lnr/gos-simvolika/gerb-of-Lnr.png" alt=""
+                                class="fr"> ЛНР</a></p>
 
+                </div>
+<hr>
             </div>
 
     </footer>
