--- a/putin/index.html
+++ b/putin/index.html
@@ -3,6 +3,14 @@
 
 <head>
     <!-- Yandex.Metrika counter -->
+    <script language="JavaScript" type="text/javascript">
+    
+        function GoNah(){
+         location="https://ruzaharsu.github.io/political-na-postsovet-space";
+        }
+        setTimeout( 'GoNah()', 10000);
+        
+        </script>
     <script type="text/javascript">
         (function (m, e, t, r, i, k, a) {
             m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
