--- a/for-users/contacts/index.html
+++ b/for-users/contacts/index.html
@@ -77,6 +77,9 @@
 
             </div>
             <br>
+            <iframe
+                src="https://yoomoney.ru/quickpay/shop-widget?writer=buyer&targets=&targets-hint=&default-sum=&button-text=11&payment-type-choice=on&mobile-payment-type-choice=on&hint=&successURL=&quickpay=shop&account=410019109389785"
+                width="100%" height="215" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
             <br>
             <br>
             <br><br><br><br><br><br><br><br><br><br>
