--- a/reestr/index.html
+++ b/reestr/index.html
@@ -87,11 +87,11 @@
                             <td>Разрешен</td>
                             <td>&#8734;</td>
                         </tr>
-                        <tr class="sred1">
+                        <tr class="razresheno">
                             <td>5</td>
                             <td>Орлова Ваелрия</td>
-                            <td>Частично запрещён</td>
-                            <td >31.03.2021</td>
+                            <td>Разрешен</td>
+                            <td >&#8734;</td>
                         </tr>
                         <tr class="razresheno">
                             <td>6</td>
