--- a/country/index.html
+++ b/country/index.html
@@ -39,12 +39,13 @@
 
         <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
         <div>
-            <a href="ussr/">СССР</a>
-            <a href="belarus/">Беларусь</a>
-            <a href="russia/">Россия</a>
-            <a href="ukraine/">Украина</a>
-            <a href="dni/">ДНР</a>
-            <a href="lnr/">ЛНР</a>
+            <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
+            <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
+            <a href="/political-na-postsovet-space/country/kazakhstan/">Казахстан</a>
+            <a href="/political-na-postsovet-space/country/russia/">Россия</a>
+            <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
+            <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
+            <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
         </div>
     </header>
     <main>
@@ -96,8 +97,8 @@
                                         class="flagi"></a> <a href="#Беларусь"><img
                                         src="/political-na-postsovet-space/country/belarus/gos-simvolika/flag-of-Belarus.png"
                                         alt="" class="flagi"> </a><a href="#Казахстан"><img
-                                        src="/political-na-postsovet-space/country/kazakhstan/flag-of-Kazakhstan.png" alt=""
-                                        class="flagi"></a> <a href="#Россия"> <img
+                                        src="/political-na-postsovet-space/country/kazakhstan/flag-of-Kazakhstan.png"
+                                        alt="" class="flagi"></a> <a href="#Россия"> <img
                                         src="/political-na-postsovet-space/country/russia/gos-simvolika/flag.svg" alt=""
                                         class="flagi"></a> <a href="#Украина"><img
                                         src="/political-na-postsovet-space/country/ukraine/flag-of-ukraine.png" alt=""
@@ -128,7 +129,8 @@
                                         class="flagi"> <b>Республика Армения </b> (арм. Հայաստանի Հանրապետություն)</p>
                                 <p>Республика Армения - член <img
                                         src="/political-na-postsovet-space/country/cis/flag-of-the-CIS.png" alt=""
-                                        class="flagi"> <b>Содружества Независимых Государств</b>, член <b>Евразийского экономического союза</b>.</p>
+                                        class="flagi"> <b>Содружества Независимых Государств</b>, член <b>Евразийского
+                                        экономического союза</b>.</p>
                             </td>
                         </tr>
                         <tr id="Беларусь">
@@ -203,25 +205,25 @@
                         <tr id="Казахстан">
                             <td>Республика Казахстан <br> <small>(Казахстан)</small></td>
                             <td>Нур-Султан <br> <small>(Астана)</small></td>
-                            <td><img src="/political-na-postsovet-space/country/kazakhstan/gerb-of-Kazakhstan.png"
+                            <td><img src="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/gerb-of-Kazakhstan.png"
                                     alt="" class="gerbs">
                                 <hr>
-                                <img src="/political-na-postsovet-space/country/kazakhstan/flag-of-Kazakhstan.png"
+                                <img src="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/flag-of-Kazakhstan.png"
                                     alt="" class="gerbs">
                             </td>
                             <td style="text-align: center;"><img
-                                    src="/political-na-postsovet-space/country/kazakhstan/gerb-of-KSSR.png" alt=""
-                                    class="gerbs">
+                                    src="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/gerb-of-KSSR.png"
+                                    alt="" class="gerbs">
                                 <hr>
-                                <img src="/political-na-postsovet-space/country/kazakhstan/flag-of-KSSR.png" alt=""
-                                    class="gerbs">
+                                <img src="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/flag-of-KSSR.png"
+                                    alt="" class="gerbs">
                             </td>
                             <td>16 декабря 1991 года</td>
                             <td>2 724 902</td>
                             <td>18 395 660</td>
                             <td>
                                 <p>Официально — <img
-                                        src="/political-na-postsovet-space/country/kazakhstan/flag-of-Kazakhstan.png"
+                                        src="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/flag-of-Kazakhstan.png"
                                         alt="" class="flagi"> <b>Республика Казахстан </b> (каз. Қазақстан
                                     Республикасы).</p>
                                 <p>Республика Казахстан - член <img
@@ -468,7 +470,7 @@
                     <div class="press">
                         <h4>Республика Армения</h4>
                         <img src="armenia/800px-Sarkissian_armen_profile.jpg" alt="" class="pres">
-                      
+
                         <figcaption><br> Армен Варданович Саркисян <br> Президент Республики Армения (с 9 апреля
                             2018)
                         </figcaption>
@@ -519,59 +521,12 @@
                 </div>
             </div>
             <br>
-            <div class="president">
-                <h3>Государственные символы стран Постсоветского пространства </h3>
-
-
-                <div class="glava">
-                    <div class="press">
-                        <h4>Республика Беларусь </h4>
-                        <img src="belarus/gos-simvolika/flag-of-Belarus.png" alt="" class="rf-flags">
-                        <figcaption>Флаг Республики Беларусь
-                        </figcaption>
-
-                        <br>
-                        <img src="belarus/gos-simvolika/gerb-of-Belarus.png" alt="" class="rf">
-                        <figcaption>Герб Республики Беларусь
-                        </figcaption>
-                    </div>
-                </div>
-
-                <div class="glava">
-                    <div class="press">
-                        <h4>Российская Федерация </h4>
-                        <img src="russia/gos-simvolika/flag-of-Russia.png" alt="" class="rf-flags">
-                        <figcaption>Флаг России
-                        </figcaption>
-                        <br><br><br><br>
-                        <img src="russia/gos-simvolika/gerb-of-Russia.png" alt="" class="rf">
-                        <figcaption>Герб России
-                        </figcaption>
-                    </div>
-                </div>
-                <div class="glava">
-                    <div class="press">
-                        <h4>Украина </h4>
-                        <img src="ukraine/flag-of-ukraine.png" alt="" class="rf-flags">
-                        <figcaption>Флаг Украины</figcaption>
-                        <br>
-                        <img src="ukraine/gerb-of-ukraine.png" alt="" class="rf">
-                        <figcaption>Герб Украины</figcaption>
-
-                    </div>
-                </div>
-            </div>
-
-
-
-
-
             <div id="primechania">
                 <small>
                     <p><i>Примечания:</i></p>
                     <ol>
                         <li>На это сайте будут представлены страны: Беларусь, Российская Федерация, Украина (с ДНР и
-                            ЛНР).
+                            ЛНР). Постепенно будут добавляться другие страны Постсоветского пространства.
                         </li>
                         <li>Независимость ДНР и ЛНР не признают члены ООН</li>
                     </ol>
@@ -579,6 +534,19 @@
 
             </div>
             <br>
+
+            <!-- Put this script tag to the <head> of your page -->
+            <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
+
+            <script type="text/javascript">
+                VK.init({ apiId: 7752244, onlyWidgets: true });
+            </script>
+
+            <!-- Put this div tag to the place, where the Comments block will be -->
+            <div id="vk_comments"></div>
+            <script type="text/javascript">
+                VK.Widgets.Comments("vk_comments", { limit: 20, attach: "*" });
+            </script>
         </div>
 
 
@@ -627,6 +595,9 @@
                     <p><a href="/political-na-postsovet-space/country/belarus/"><img
                                 src="/political-na-postsovet-space/country/belarus/gos-simvolika/gerb-of-Belarus.png"
                                 alt="" class="fr"> Беларусь</a></p>
+                    <p> <a href="/political-na-postsovet-space/country/kazakhstan/"><img
+                        src="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/gerb-of-Kazakhstan.png"
+                        alt="" class="fr"> Казахстан</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/"><img
                                 src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"
                                 alt="" class="fr"> Россия</a></p>
