--- a/country/ussr/Leaders-of-the-USSR/index.html
+++ b/country/ussr/Leaders-of-the-USSR/index.html
@@ -38,18 +38,20 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Post Soviet space <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="dre"> </a>
-  
-        <a href="/political-na-postsovet-space/country/" >Страны</a>
+        <a href="/political-na-postsovet-space/">Post Soviet space <img
+                src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="dre"> </a>
+
+        <a href="/political-na-postsovet-space/country/">Страны</a>
         <div>
-            <a href="/political-na-postsovet-space/country/ussr/" >СССР</a>
+            <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">БССР</a>
+            <a href="/political-na-postsovet-space/country/kazakhstan/">КССР</a>
             <a href="/political-na-postsovet-space/country/russia/">РСФСР</a>
             <a href="/political-na-postsovet-space/country/ukraine/">УССР</a>
-           
+
         </div>
         <div id="nav-country">
-            <a href="/political-na-postsovet-space/country/ussr/" >Основная информация</a>
+            <a href="/political-na-postsovet-space/country/ussr/">Основная информация</a>
             <a href="/political-na-postsovet-space/country/ussr/gos-simvolika/">Государственная символика</a>
             <a href="/political-na-postsovet-space/country/ussr/Leaders-of-the-USSR/">Руководители СССР</a>
         </div>
@@ -138,6 +140,7 @@
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
+                    <p> <a href="/political-na-postsovet-space/country/kazakhstan/">Казахстан</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/">Россия</a></p>
                     <p><a href="/political-na-postsovet-space/country/ukraine/">Украина</a></p>
                     <p><a href="/political-na-postsovet-space/country/dni/">ДНР</a></p>
