--- a/country/lnr/gos-simvolika/index.html
+++ b/country/lnr/gos-simvolika/index.html
@@ -36,11 +36,12 @@
 <body>
     <header>
         <a href="/political-na-postsovet-space/">Постсоветское пространство</a>
-       
+
         <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
         <div>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
+            <a href="/political-na-postsovet-space/country/kazakhstan/">Казахстан</a>
             <a href="/political-na-postsovet-space/country/russia/">Россия</a>
             <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
             <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
@@ -206,8 +207,8 @@
                 <div class="col-sm">
                     &copy; 2020-2021 ООО "СССР"
                     <script src="https://yastatic.net/share2/share.js"></script>
-                    <div class="ya-share2" data-curtain 
-                        data-services="messenger,vkontakte,odnoklassniki,telegram"></div>
+                    <div class="ya-share2" data-curtain data-services="messenger,vkontakte,odnoklassniki,telegram">
+                    </div>
                 </div>
                 <div class="col-sm">
                     <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
@@ -222,6 +223,7 @@
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
+                    <p> <a href="/political-na-postsovet-space/country/kazakhstan/">Казахстан</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/">Россия</a></p>
                     <p><a href="/political-na-postsovet-space/country/ukraine/">Украина</a></p>
                     <p><a href="/political-na-postsovet-space/country/dni/">ДНР</a></p>
