--- a/country/russia/russian-tradition/russian-kithen/index.html
+++ b/country/russia/russian-tradition/russian-kithen/index.html
@@ -439,6 +439,7 @@
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
+                    <p>    <a href="/political-na-postsovet-space/country/kazakhstan/">Казахстан</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/">Россия</a></p>
                     <p><a href="/political-na-postsovet-space/country/ukraine/">Украина</a></p>
                     <p><a href="/political-na-postsovet-space/country/dni/">ДНР</a></p>
