--- a/country/ukraine/gos-system/index.html
+++ b/country/ukraine/gos-system/index.html
@@ -42,6 +42,7 @@
         <div>
             <a href="/political-na-postsovet-space/country/ussr/">СРСР</a>
             <a href="/political-na-postsovet-space/country/belarus/">Білорусь</a>
+            <a href="/political-na-postsovet-space/country/kazakhstan/">Казахстан</a>
             <a href="/political-na-postsovet-space/country/russia/">Росія</a>
             <a href="/political-na-postsovet-space/country/ukraine/">Україна</a>
             <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
@@ -248,6 +249,7 @@
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
+                    <p> <a href="/political-na-postsovet-space/country/kazakhstan/">Казахстан</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/">Россия</a></p>
                     <p><a href="/political-na-postsovet-space/country/ukraine/">Украина</a></p>
                     <p><a href="/political-na-postsovet-space/country/dni/">ДНР</a></p>
