--- a/country/ussr/index.html
+++ b/country/ussr/index.html
@@ -42,6 +42,7 @@
         <div>
             <a href="/political-na-postsovet-space/country/ussr/" >СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">БССР</a>
+            <a href="/political-na-postsovet-space/country/kazakhstan/">КССР</a>
             <a href="/political-na-postsovet-space/country/russia/">РСФСР</a>
             <a href="/political-na-postsovet-space/country/ukraine/">УССР</a>
           
@@ -409,6 +410,7 @@
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
+                    <p>    <a href="/political-na-postsovet-space/country/kazakhstan/">Казахстан</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/">Россия</a></p>
                     <p><a href="/political-na-postsovet-space/country/ukraine/">Украина</a></p>
                     <p><a href="/political-na-postsovet-space/country/dni/">ДНР</a></p>
