--- a/country/index.html
+++ b/country/index.html
@@ -205,18 +205,21 @@
                         <tr id="Казахстан">
                             <td>Республика Казахстан <br> <small>(Казахстан)</small></td>
                             <td>Нур-Султан <br> <small>(Астана)</small></td>
-                            <td><img src="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/gerb-of-Kazakhstan.png"
-                                    alt="" class="gerbs">
+                            <td><a href="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/#герб"><img
+                                        src="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/gerb-of-Kazakhstan.png"
+                                        alt="" class="gerbs"></a>
                                 <hr>
-                                <img src="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/flag-of-Kazakhstan.png"
-                                    alt="" class="gerbs">
+                                <a href="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/#флаг"><img src="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/flag-of-Kazakhstan.png"
+                                    alt="" class="gerbs"></a>
                             </td>
-                            <td style="text-align: center;"><img
-                                    src="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/gerb-of-KSSR.png"
-                                    alt="" class="gerbs">
+                            <td style="text-align: center;"><a
+                                    href="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/#герб"><img
+                                        src="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/gerb-of-KSSR.png"
+                                        alt="" class="gerbs"></a>
                                 <hr>
+                                <a href="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/#флаг">
                                 <img src="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/flag-of-KSSR.png"
-                                    alt="" class="gerbs">
+                                    alt="" class="gerbs"></a>
                             </td>
                             <td>16 декабря 1991 года</td>
                             <td>2 724 902</td>
@@ -596,8 +599,8 @@
                                 src="/political-na-postsovet-space/country/belarus/gos-simvolika/gerb-of-Belarus.png"
                                 alt="" class="fr"> Беларусь</a></p>
                     <p> <a href="/political-na-postsovet-space/country/kazakhstan/"><img
-                        src="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/gerb-of-Kazakhstan.png"
-                        alt="" class="fr"> Казахстан</a></p>
+                                src="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/gerb-of-Kazakhstan.png"
+                                alt="" class="fr"> Казахстан</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/"><img
                                 src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"
                                 alt="" class="fr"> Россия</a></p>
