--- a/country/kazakhstan/gos-simvolika/index.html
+++ b/country/kazakhstan/gos-simvolika/index.html
@@ -101,7 +101,7 @@
             </p>
 
             </p>
-            <h2 id="флаг">Флаг СССР</h2>
+            <h2 id="флаг">Флаг Казахстана</h2>
             <hr>
             <p>
                 Государственный флаг Респу́блики Казахстан (каз. Қазақстан Республикасының мемлекеттік туы) — один из
