--- a/for-users/contacts/index.html
+++ b/for-users/contacts/index.html
@@ -77,9 +77,9 @@
 
             </div>
             <br>
-            <iframe
-                src="https://yoomoney.ru/quickpay/shop-widget?writer=buyer&targets=&targets-hint=&default-sum=&button-text=11&payment-type-choice=on&mobile-payment-type-choice=on&hint=&successURL=&quickpay=shop&account=410019109389785"
-                width="100%" height="215" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
+            <iframe <iframe
+                src="https://yoomoney.ru/quickpay/shop-widget?writer=seller&targets=%D0%9D%D0%B0%20%D1%80%D0%B0%D0%B7%D0%B2%D0%B8%D1%82%D0%B8%D0%B5%20%D0%A1%D0%B0%D0%B9%D1%82%D0%B0&targets-hint=&default-sum=&button-text=14&payment-type-choice=on&mobile-payment-type-choice=on&hint=&successURL=&quickpay=shop&account=4100116439287320"
+                width="100%" height="222" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
             <br>
             <br>
             <br><br><br><br><br><br><br><br><br><br>
