--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -37,10 +37,13 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Post Soviet space <img src="emblem_gold.svg" alt="" class="dre"> </a>
-
-        <a href="/political-na-postsovet-space/country/">Страны</a>
+    
+        <a href="/political-na-postsovet-space/">
+            <img
+            src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg" alt="" class="redr"></a>
+      
         <div>
+            <a href="/political-na-postsovet-space/country/" >Страны</a>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
             <a href="/political-na-postsovet-space/country/kazakhstan/">Казахстан</a>
@@ -57,6 +60,8 @@
         </div>
     </header>
     <main>
+        <iframe src="https://datalens.yandex/r955h4jb7k6qn?_embedded=1&_theme=dark" width="100%" height="300"
+        frameborder="0"></iframe>
         <div class="container">
             <h1>Государственные символы России</h1>
             <hr>
