--- a/country/kazakhstan/gos-simvolika/index.html
+++ b/country/kazakhstan/gos-simvolika/index.html
@@ -39,7 +39,7 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Post Soviet space <img src="gerb-of-KSSR.png" alt="" class="dre"> </a>
+        <a href="/political-na-postsovet-space/"><img src="gerb-of-KSSR.png" alt="" class="redr"> </a>
 
         <a href="/political-na-postsovet-space/country/">Страны</a>
         <div>
