--- a/country/kazakhstan/index.html
+++ b/country/kazakhstan/index.html
@@ -36,9 +36,9 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Post Soviet space <img
+        <a href="/political-na-postsovet-space/"><img
                 src="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/gerb-of-Kazakhstan.png" alt=""
-                class="dre"> </a>
+                class="redr"> </a>
 
         <a href="/political-na-postsovet-space/country/">Страны</a>
         <div>
