--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -34,12 +34,13 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Post Soviet space <img
-                src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg" alt="" class="dre">
-        </a>
-
-        <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
+        
+        <a href="/political-na-postsovet-space/">
+            <img
+            src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg" alt="" class="redr"></a>
+     
         <div>
+            <a href="/political-na-postsovet-space/country/" >Страны</a>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
             <a href="/political-na-postsovet-space/country/kazakhstan/">Казахстан</a>
