--- a/country/russia/russian-tradition/index.html
+++ b/country/russia/russian-tradition/index.html
@@ -37,12 +37,12 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство <img
-                src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg" alt="" class="dre">
-        </a>
-
-        <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
+        <a href="/political-na-postsovet-space/">
+            <img
+            src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg" alt="" class="redr"></a>
+      
         <div>
+            <a href="/political-na-postsovet-space/country/" >Страны</a>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
             <a href="/political-na-postsovet-space/country/kazakhstan/">Казахстан</a>
@@ -61,6 +61,8 @@
 
     </header>
     <main>
+        <iframe src="https://datalens.yandex/r955h4jb7k6qn?_embedded=1&_theme=dark" width="100%" height="300"
+        frameborder="0"></iframe>
         <div class="container">
             <h1>Наши русские традиции</h1>
             <h2>Русский менталитет</h2>
@@ -73,7 +75,7 @@
             </div>
             <div class="flags">
                 <h2> <a href="/political-na-postsovet-space/country/russia/russian-tradition/russian-kithen/"
-                        class="russika-kyxna"> Русская
+                        style="text-decoration: underline;"> Русская
                         кухня </a></h2>
                 <hr>
                 <div class="photol">
