--- a/country/russia/russian-tradition/russian-kithen/index.html
+++ b/country/russia/russian-tradition/russian-kithen/index.html
@@ -35,13 +35,15 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство <img
-                src="grecha-s-sosisonami/scale_1200.webp" alt="" class="dre"> </a>
+        <a href="/political-na-postsovet-space/"><img
+                src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg" alt="" class="redr"> </a>
 
-        <a href="/political-na-postsovet-space/country/">Страны</a>
+    
         <div>
+            <a href="/political-na-postsovet-space/country/">Страны</a>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
+            <a href="/political-na-postsovet-space/country/kazakhstan/">Казахстан</a>
             <a href="/political-na-postsovet-space/country/russia/">Россия</a>
             <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
             <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
@@ -57,6 +59,8 @@
 
     </header>
     <main>
+        <iframe src="https://datalens.yandex/r955h4jb7k6qn?_embedded=1&_theme=dark" width="100%" height="300"
+        frameborder="0"></iframe>
         <div class="container">
 
             <h1>Русская кухня</h1>
@@ -202,7 +206,7 @@
             </div>
 
             <br>
-            <p>Среди мясных блюд мое любимое - отбивные.</p>
+      
             <div class="flags">
                 <h2>Чаёк в России</h2>
                 <hr>
