--- a/country/ussr/index.html
+++ b/country/ussr/index.html
@@ -36,13 +36,14 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Post Soviet space  <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="dre"> </a>
+        <a href="/political-na-postsovet-space/"><img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="redr"> </a>
   
-        <a href="/political-na-postsovet-space/country/" >Страны</a>
+     
         <div>
+            <a href="/political-na-postsovet-space/country/" >Страны</a>
             <a href="/political-na-postsovet-space/country/ussr/" >СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">БССР</a>
-            <a href="/political-na-postsovet-space/country/kazakhstan/">КССР</a>
+            <a href="/political-na-postsovet-space/country/kazakhstan/">КазССР</a>
             <a href="/political-na-postsovet-space/country/russia/">РСФСР</a>
             <a href="/political-na-postsovet-space/country/ukraine/">УССР</a>
           
