--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
                     <p><a href="/political-na-postsovet-space/country/belarus/"><img
                                 src="/political-na-postsovet-space/country/belarus/gos-simvolika/gerb-of-Belarus.png"
                                 alt="" class="fr"> Беларусь</a></p>
+                                <p><a href="/political-na-postsovet-space/country/kazakhstan/"><img
+                                    src="/political-na-postsovet-space/country/kazakhstan/gos-simvolika/gerb-of-Kazakhstan.png"
+                                    alt="" class="fr"> Казахстан</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/"><img
                                 src="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"
                                 alt="" class="fr"> Россия</a></p>
