--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -37,10 +37,11 @@
 
 <body>
     <header>
-    
         <a href="/political-na-postsovet-space/">
-            <img
-            src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg" alt="" class="redr"></a>
+            <img src="/political-na-postsovet-space/country/russia/gos-simvolika/Russian-tsar.png" alt="" class="redr">
+            Русское государство
+             <img src="/political-na-postsovet-space/country/russia/gos-simvolika/Russian-tsar.png" alt="" class="redr">
+           </a>
       
         <div>
             <a href="/political-na-postsovet-space/country/" >Страны</a>
