--- a/country/russia/president/index.html
+++ b/country/russia/president/index.html
@@ -35,8 +35,10 @@
 <body>
     <header>
         <a href="/political-na-postsovet-space/">
-            <img
-            src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg" alt="" class="redr"></a>
+            <img src="/political-na-postsovet-space/country/russia/gos-simvolika/Russian-Empire.png" alt="" class="redr">
+            Российская империя
+             <img src="/political-na-postsovet-space/country/russia/gos-simvolika/Russian-Empire.png" alt="" class="redr">
+           </a>
      
         <div>
             <a href="/political-na-postsovet-space/country/" >Страны</a>
