--- a/country/ussr/gos-simvolika/index.html
+++ b/country/ussr/gos-simvolika/index.html
@@ -39,8 +39,11 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/"><img
-                src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="redr"> </a>
+        <a href="/political-na-postsovet-space/">
+            <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="redr">
+            Союз Советских Социалистических Республик
+             <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="redr">
+           </a>  
 
  
         <div>
