--- a/country/ussr/index.html
+++ b/country/ussr/index.html
@@ -36,8 +36,11 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/"><img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="redr"> </a>
-  
+        <a href="/political-na-postsovet-space/">
+            <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="redr">
+            Союз Советских Социалистических Республик
+             <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="redr">
+           </a>  
      
         <div>
             <a href="/political-na-postsovet-space/country/" >Страны</a>
