--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -40,11 +40,11 @@
         <a href="/political-na-postsovet-space/">
             <img src="/political-na-postsovet-space/country/russia/gos-simvolika/Russian-tsar.png" alt="" class="redr">
             Русское государство
-             <img src="/political-na-postsovet-space/country/russia/gos-simvolika/Russian-tsar.png" alt="" class="redr">
-           </a>
-      
+            <img src="/political-na-postsovet-space/country/russia/gos-simvolika/Russian-tsar.png" alt="" class="redr">
+        </a>
+
         <div>
-            <a href="/political-na-postsovet-space/country/" >Страны</a>
+            <a href="/political-na-postsovet-space/country/">Страны</a>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
             <a href="/political-na-postsovet-space/country/kazakhstan/">Казахстан</a>
@@ -62,7 +62,7 @@
     </header>
     <main>
         <iframe src="https://datalens.yandex/r955h4jb7k6qn?_embedded=1&_theme=dark" width="100%" height="300"
-        frameborder="0"></iframe>
+            frameborder="0"></iframe>
         <div class="container">
             <h1>Государственные символы России</h1>
             <hr>
@@ -91,10 +91,7 @@
 
             <h2 id="герб">Государственный герб России</h2>
             <hr>
-            <br>
-            <div class="photol"><img src="gerb-of-Russia-before-1993.png" alt="" width="250px">
-                <figcaption>Герб России 1992-1993</figcaption>
-            </div>
+
 
             <p>
                 Государственный герб Российской Федерации представляет собой четырёхугольный, с закруглёнными
@@ -104,9 +101,7 @@
                 расправленные крылья. Орёл увенчан
                 двумя
                 малыми
-            <div class="photo"><img src="emblem_red-bg.svg" width="250px">
-                <figcaption>Герб России 1993-н. в.</figcaption>
-            </div>
+            
             коронами и — над ними — одной большой короной, соединёнными
             лентой. В правой лапе орла — скипетр, в левой — держава. На груди орла, в красном щите, — серебряный
             всадник
@@ -118,22 +113,43 @@
             </p>
 
 
-            <br>
-            <br>
-            <br>
-            <br>
-            <br><br><br><br><br>
+            <div class="president">
+                <h3>Фотографии Гербов Российской Федерации
+                    <hr>Photos of the Coats of Arms of the Russian Federation
+                </h3>
+                <div class="elsin">
+                    <img src="Russian-tsar.png" alt="" class="pres">
 
+                    <figcaption>Герб Русского государства
+                        <hr>Coat of arms of the Russian State
+                    </figcaption>
+                </div>
+                <div class="putin">
+                    <img src="Russian-Empire.png" alt="" class="pres">
+                    <figcaption>Герб Российской Империи <hr>Coat of Arms of the Russian Empire</figcaption>
+                </div>
+                <div class="medvedev">
+                    <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="pres">
+                    <figcaption>Герб СССР<hr>Coat of Arms of the USSR</figcaption>
+                </div>
+                <div class="medvedev">
+                    <img src="gerb-of-RSFSR.png" alt="" class="pres">
+                    <figcaption>Герб РСФСР <hr>Coat of arms of the RSFSR</figcaption>
+                </div>
+                <div class="putin">
+                    <img src="gerb-of-Russia-before-1993.png" alt="" class="pres">
+                    <figcaption>Герб России (до 1993)<hr>Coat of Arms of Russia (until 1993)</figcaption>
+                </div>
+                <div class="putin">
+                    <img src="emblem_red-bg.svg" alt="" class="pres">
+                    <figcaption>Герб <br>России (1993 - н. в.) <hr> Coat of Arms of Russia (1993-present)</figcaption>
+                </div>
+            </div>
 
+<br>
             <h2 id="флаг">Государственный флаг России</h2>
             <hr>
             <br>
-
-
-            <div class="photol"><img src="flag-of-Russia-before-1993.png" alt="" width="250px">
-                <figcaption>Флаг России 1991-1993</figcaption>
-            </div>
-
             <p>
                 Государственный флаг — это опознавательный знак государства, исполняет ту же функцию, что и
                 государственный
@@ -186,7 +202,36 @@
                 флагов,
                 общий свод которых называется флажным протоколом.
             </p>
+            <div class="imperia">
+                <h3>Фотографии Флагов Российской Федерации
+                    <hr>Photos of the Flags of the Russian Federation
+                </h3>
+                <div class="elsin">
+                    <img src="flag-of-Russia.png" alt="" class="pres">
 
+                    <figcaption>Флаг  Русского государства <hr>Flag of the Russian State</figcaption>
+                </div>
+                <div class="putin">
+                    <img src="flag-of-Russia.png" alt="" class="pres">
+                    <figcaption>Флаг  Российской Империи <hr>Flag of the Russian Empire</figcaption>
+                </div>
+                <div class="medvedev">
+                    <img src="/political-na-postsovet-space/country/ussr/flag-of-USSR.png" alt="" class="pres">
+                    <figcaption>Флаг СССР <hr> Flag of the USSR</figcaption>
+                </div>
+                <div class="medvedev">
+                    <img src="flag-of-RSFSR.png" alt="" class="pres">
+                    <figcaption>Флаг РСФСР <hr>Flag of the RSFSR</figcaption>
+                </div>
+                <div class="putin">
+                    <img src="flag-of-Russia-before-1993.png" alt="" class="pres">
+                    <figcaption>Флаг России (до 1993) <hr>Flag of Russia (until 1993)</figcaption>
+                </div>
+                <div class="putin">
+                    <img src="flag.svg" alt="" class="pres">
+                    <figcaption>Флаг России (1993 - н. в.) <hr> Flag of Russia (1993-present)</figcaption>
+                </div>
+            </div>
             <br>
             <br>
             <br>
